# variant-core

./: .gitignore  README.MD  pyproject.toml
src/variant_core/: __init__.py  bed.py  vcf.py
src/variant_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
