[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "variant-core"
version = "0.1.0"
description = "A memory-optimized, strictly-typed genomic parser."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Shiva Sadeghpour", email="shiva.sghpr@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []